--- a/.github/workflows/github-actions-dockerhub.yml
+++ b/.github/workflows/github-actions-dockerhub.yml
@@ -1,6 +1,8 @@
 name: Publish Docker image
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
     types: [assigned, opened, synchronize, reopened]
 
